sass/inputs/_list.scss
// UI List Input
// @description :
// @author      : Adarsh Pastakia
// @copyright   : 2016 Sigma Frameworks
// @license     : MIT

.ui-list {
    overflow     : auto;

    max-height   : 18em;

    border       : 1px solid $base-border-color;
    border-radius: $base-border-radius;
    background   : $base-bg;

    &.floating {
        // position: absolute;
        z-index: 50;
        // right   : 0;
        // left    : 0;
        // @include box-shadow(0 2px 4px 0 $base-shadow-color);
    }

    &.reverse {
        // @include box-shadow(0 -2px 4px 0 $base-shadow-color);
    }

    .ui-lang-remove {
        margin: .4em .5em;

        cursor: pointer;

        color : $danger;

        &:hover {
            color: darken($danger, 10%);
        }
    }

    .ui-list-item {
        font-size: .9em;

        cursor   : pointer;
        @include flex-row(center, flex-start, false);

        .ui-text {
            padding: .4em .5em;
        }

        .ui-icon {
            margin: 0 .5em;
        }

        &.hilight,
        &:hover {
            color     : $secondary-text;
            background: rgba($secondary, .5);
        }

        &.selected {
            color     : $secondary-text;
            background: $secondary;
        }
    }

    .ui-list-group {
        display: block;

        > p {
            font-size: .75em;

            padding  : .2em .5em;

            color    : $text-muted;
        }
    }

    &.ui-dual {
        border: none;
    }

    &.ui-reorder {
        display : block;
        border  : none;
        position: relative;

        .ui-list-item {
            cursor: move;

            &:hover {
                background: none;
            }

            &.dragging {
                visibility: hidden;
            }

            > .ui-icon {
                // cursor: pointer;
            }
        }

        .ui-ghost {
            color     : $secondary-text;
            background: rgba($secondary, .5);
            border    : 1px solid $secondary;

            position  : absolute;
            left      : 0;
            right     : 0;
        }
    }

}

.ui-list-dual {
    .ui-input-wrapper {
        @include flex-column();
        min-height: 10em;
        max-height: 18em;
        border    : 1px solid $input-border;

        .ui-list {
            @include flex(1 1 0);
            min-height: inherit;
            max-height: inherit;
        }
    }
}

.ui-tags {
    padding: 0 !important;
    @include flex-row(flex-start, flex-start, true);

    > input {
        font-size : 1em;

        overflow  : visible;

        margin    : .3em;

        color     : $input-text;
        border    : none !important;
        background: transparent !important;
        @include flex(1 1 0);
    }

    .ui-tag {
        line-height  : 1;

        position     : relative;

        min-height   : 1.8em;
        margin       : .3em;
        padding      : .1em 1.25em .1em .3em;

        cursor       : pointer;

        color        : $input-text;
        border       : none;
        border-radius: $base-border-radius;
        background   : shade($input-bg, 5%);
        @include box-shadow(0 0 2px 0 $base-shadow-color);

        &:after {
            font-size  : 1em;
            line-height: 1.7em;

            padding    : 0 .2em;

            content    : '×';

            color      : $text-muted;
            @include position(absolute, $r: 0, $t : 0, $b : 0);
        }
    }

    &.ui-readonly {
        pointer-events: none;

        background    : $input-readonly-bg;
    }

    &.ui-disabled {
        cursor        : not-allowed;
        pointer-events: none;

        color         : rgba($input-text, .5);
        background    : $input-disabled-bg;

        .ui-tag {
            opacity: .7;
        }
    }
}

